implementação barra lateral

--- a/index.html
+++ b/index.html
@@ -44,6 +44,278 @@
                         <input type="text" placeholder="Pesquisar ou começar uma nova conversa">
                     </div>
                 </div>
+                <div class="contactList">
+                    <div class="contato">
+                        <div class="fotoContato"></div>
+                        <div class="infoContato">
+                            <div class="nomeHora">
+                                <div class="nome">Cristiano</div>
+                                <div class="hora">14:14</div>
+                            </div>
+                            <div class="ultimaMensagem">
+                                <div class="mensagem">
+                                    <span class="iconChecked"></span>
+                                    <div class="text">Blz</div>
+                                </div>
+                                <div class="iconDropdown">
+                                    <div class="bullet"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="contato">
+                        <div class="fotoContato"></div>
+                        <div class="infoContato">
+                            <div class="nomeHora">
+                                <div class="nome">Cristiano</div>
+                                <div class="hora">14:14</div>
+                            </div>
+                            <div class="ultimaMensagem">
+                                <div class="mensagem">
+                                    <span class="iconChecked"></span>
+                                    <div class="text">Blz</div>
+                                </div>
+                                <div class="iconDropdown">
+                                    <div class="bullet"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="contato">
+                        <div class="fotoContato"></div>
+                        <div class="infoContato">
+                            <div class="nomeHora">
+                                <div class="nome">Cristiano</div>
+                                <div class="hora">14:14</div>
+                            </div>
+                            <div class="ultimaMensagem">
+                                <div class="mensagem">
+                                    <span class="iconChecked"></span>
+                                    <div class="text">Blz</div>
+                                </div>
+                                <div class="iconDropdown">
+                                    <div class="bullet"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="contato">
+                        <div class="fotoContato"></div>
+                        <div class="infoContato">
+                            <div class="nomeHora">
+                                <div class="nome">Cristiano</div>
+                                <div class="hora">14:14</div>
+                            </div>
+                            <div class="ultimaMensagem">
+                                <div class="mensagem">
+                                    <span class="iconChecked"></span>
+                                    <div class="text">Blz</div>
+                                </div>
+                                <div class="iconDropdown">
+                                    <div class="bullet"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="contato">
+                        <div class="fotoContato"></div>
+                        <div class="infoContato">
+                            <div class="nomeHora">
+                                <div class="nome">Cristiano</div>
+                                <div class="hora">14:14</div>
+                            </div>
+                            <div class="ultimaMensagem">
+                                <div class="mensagem">
+                                    <span class="iconChecked"></span>
+                                    <div class="text">Blz</div>
+                                </div>
+                                <div class="iconDropdown">
+                                    <div class="bullet"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="contato">
+                        <div class="fotoContato"></div>
+                        <div class="infoContato">
+                            <div class="nomeHora">
+                                <div class="nome">Cristiano</div>
+                                <div class="hora">14:14</div>
+                            </div>
+                            <div class="ultimaMensagem">
+                                <div class="mensagem">
+                                    <span class="iconChecked"></span>
+                                    <div class="text">Blz</div>
+                                </div>
+                                <div class="iconDropdown">
+                                    <div class="bullet"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="contato">
+                        <div class="fotoContato"></div>
+                        <div class="infoContato">
+                            <div class="nomeHora">
+                                <div class="nome">Cristiano</div>
+                                <div class="hora">14:14</div>
+                            </div>
+                            <div class="ultimaMensagem">
+                                <div class="mensagem">
+                                    <span class="iconChecked"></span>
+                                    <div class="text">Blz</div>
+                                </div>
+                                <div class="iconDropdown">
+                                    <div class="bullet"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="contato">
+                        <div class="fotoContato"></div>
+                        <div class="infoContato">
+                            <div class="nomeHora">
+                                <div class="nome">Cristiano</div>
+                                <div class="hora">14:14</div>
+                            </div>
+                            <div class="ultimaMensagem">
+                                <div class="mensagem">
+                                    <span class="iconChecked"></span>
+                                    <div class="text">Blz</div>
+                                </div>
+                                <div class="iconDropdown">
+                                    <div class="bullet"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="contato">
+                        <div class="fotoContato"></div>
+                        <div class="infoContato">
+                            <div class="nomeHora">
+                                <div class="nome">Cristiano</div>
+                                <div class="hora">14:14</div>
+                            </div>
+                            <div class="ultimaMensagem">
+                                <div class="mensagem">
+                                    <span class="iconChecked"></span>
+                                    <div class="text">Blz</div>
+                                </div>
+                                <div class="iconDropdown">
+                                    <div class="bullet"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="contato">
+                        <div class="fotoContato"></div>
+                        <div class="infoContato">
+                            <div class="nomeHora">
+                                <div class="nome">Cristiano</div>
+                                <div class="hora">14:14</div>
+                            </div>
+                            <div class="ultimaMensagem">
+                                <div class="mensagem">
+                                    <span class="iconChecked"></span>
+                                    <div class="text">Blz</div>
+                                </div>
+                                <div class="iconDropdown">
+                                    <div class="bullet"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="contato">
+                        <div class="fotoContato"></div>
+                        <div class="infoContato">
+                            <div class="nomeHora">
+                                <div class="nome">Cristiano</div>
+                                <div class="hora">14:14</div>
+                            </div>
+                            <div class="ultimaMensagem">
+                                <div class="mensagem">
+                                    <span class="iconChecked"></span>
+                                    <div class="text">Blz</div>
+                                </div>
+                                <div class="iconDropdown">
+                                    <div class="bullet"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="contato">
+                        <div class="fotoContato"></div>
+                        <div class="infoContato">
+                            <div class="nomeHora">
+                                <div class="nome">Cristiano</div>
+                                <div class="hora">14:14</div>
+                            </div>
+                            <div class="ultimaMensagem">
+                                <div class="mensagem">
+                                    <span class="iconChecked"></span>
+                                    <div class="text">Blz</div>
+                                </div>
+                                <div class="iconDropdown">
+                                    <div class="bullet"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="contato">
+                        <div class="fotoContato"></div>
+                        <div class="infoContato">
+                            <div class="nomeHora">
+                                <div class="nome">Cristiano</div>
+                                <div class="hora">14:14</div>
+                            </div>
+                            <div class="ultimaMensagem">
+                                <div class="mensagem">
+                                    <span class="iconChecked"></span>
+                                    <div class="text">Blz</div>
+                                </div>
+                                <div class="iconDropdown">
+                                    <div class="bullet"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="contato">
+                        <div class="fotoContato"></div>
+                        <div class="infoContato">
+                            <div class="nomeHora">
+                                <div class="nome">Cristiano</div>
+                                <div class="hora">14:14</div>
+                            </div>
+                            <div class="ultimaMensagem">
+                                <div class="mensagem">
+                                    <span class="iconChecked"></span>
+                                    <div class="text">Blz</div>
+                                </div>
+                                <div class="iconDropdown">
+                                    <div class="bullet"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="contato">
+                        <div class="fotoContato"></div>
+                        <div class="infoContato">
+                            <div class="nomeHora">
+                                <div class="nome">Cristiano</div>
+                                <div class="hora">14:14</div>
+                            </div>
+                            <div class="ultimaMensagem">
+                                <div class="mensagem">
+                                    <span class="iconChecked"></span>
+                                    <div class="text">Blz</div>
+                                </div>
+                                <div class="iconDropdown">
+                                    <div class="bullet"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
