--- a/index.html
+++ b/index.html
@@ -317,6 +317,22 @@
                     </div>
                 </div>
             </div>
+
+            <div class="content">
+                <div class="historico">historico</div>
+                <div class="form">
+                    <div class="iconsPost">
+                        <div class="icon-post"><img src="./assets/icons/instagram-stories.svg" alt=""></div>
+                        <div class="icon-post"><img src="./assets/icons/instagram-stories.svg" alt=""></div>
+                    </div>
+                    <div class="formPost">
+                        <div class="inputForm">
+                            <input type="text" placeholder="Digite uma mensagem">
+                        </div>
+                        <div class="icon-post"><img src="./assets/icons/instagram-stories.svg" alt=""></div>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </div>
